﻿Version: 0.3.4.0
  New Features:
  - Added the ability to show execution plans
  Bug Fixes:
  - Fixed an issue where MySQL index columns were not accurate in the database explorer
Version: 0.3.3.0
  New Features:
  - Added a feature that allows you to double-click a column or a table and have it automatically paste into SQL worksheet
  - Added a new feature that allows a double-click (or a right click menu item) on a cell to view it's value in an editor. If a column value if valid XML document, XML editor will be shown
  - Added additional themes for Office 2013 and Windows 8
  - Completely new Find/Replace dialog with more robust searching/replacing and ability to use regular expressions
  - Added the ability to view and browse constraints
  - Implemented better handling of database object browsing for MS Access (using ADOX)
  - Added automatic check for updates to run every week
  - Added the ability to create table DDL (requires db2look for DB2)
  - Added the ability to view included columns on unique indexes
  - Added the ability to create view DDL (requires db2look for DB2)
  - Added the ability to script SELECT and DROP statements for views
  - Upgraded drivers for Oracle, MySQL and SQLite
  Bug Fixes:
  - Fixed regression issue where some items on the File menu did not have icons
  - Fixed an issue where refresh button was enabled on query results before any query was run. Clicking on a button in that state caused a crash
  - Fixed an issue where appending text to SQL worksheet was appending text in overwrite mode. Text is now inserted
  - Fixed an issue where a completely commented SQL statement was attempted to be run as part of a Run as Script option
  - Fixed an issue where row highlighting was not correct in query results grid after sorting
  - Fixed an issue where SQL Server queries were timing out after 30 seconds because default timeout on SqlCommand is 30 seconds
  - Fixed an issue where MS Access connection string was not being saved properly